re-organize, work on v1.1

--- a/original/chess-openings-old/chess-openings.tex
+++ b/original/chess-openings-old/chess-openings.tex
@@ -6,7 +6,6 @@
 \usepackage[tracking]{microtype}
 \usepackage[compact]{titlesec}
 \usepackage{xskak}
-\xskakset{style=UF}
 \usepackage{graphicx}     % scalebox
 \usepackage{float}        % figures with [H]
 \usepackage{framed}       % for debugging
@@ -16,11 +15,10 @@
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{Page \thepage}
-\lhead{Common chess openings (revision 1.1, edited: 2025-08-22)}
+\lhead{Common chess openings (revision 1.0, last edited: 2021-01-03)}
 \rfoot{Source: \url{https://github.com/papabeans1/theory-of-chess}}
 
 \newcommand{\openingname}[1]{\emph{#1}}
-\styleA
 \begin{document}
 \author{Remigiusz Suwalski}
 \title{Chess openings}
