--- a/chess-openings/chess-openings.tex
+++ b/chess-openings/chess-openings.tex
@@ -16,7 +16,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{Page \thepage}
-\lhead{Common chess openings (revision 1.1, edited: 2025-08-22)}
+\lhead{Common chess openings (revision 1.2, last edited: 2025-08-23)}
 \rfoot{Source: \url{https://github.com/papabeans1/theory-of-chess}}
 
 \newcommand{\openingname}[1]{\emph{#1}}
@@ -32,4 +32,6 @@
 \input{src/semi}
 \section{Indian defences}
 \input{src/indian}
+\section{Flank openings}
+\input{src/flank}
 \end{document}
