--- a/chess-openings/src/closed.tex
+++ b/chess-openings/src/closed.tex
@@ -6,7 +6,7 @@
 \end{center}
 \newgame
 %FEN@rnbqkb1r/1p3ppp/p3pn2/2p5/2BP4/4PN2/PP3PPP/RNBQ1RK1 w kq - 0 7
-\openingname{Queen's Gambit Accepted}: \mainline{1. d4 d5 2. c4 dxc4}, main line: \mainline{3. Nf3 Nf6 4. e3 e6 5. Bxc4 c5 6. 0-0 a6} (diagram).\vspace{2mm}
+\openingname{Queen's Gambit Accepted}: \mainline{1. d4 d5 2. c4 dxc4}, main line: \mainline{3. Nf3 Nf6 4. e3 e6 5. Bxc4 c5 6. O-O a6} (diagram).\vspace{2mm}
 \end{minipage}
 \hspace{5mm}
 \begin{minipage}[t]{.175\linewidth}
