--- a/chess-openings/src/014-s-sicilian-defence-4.tex
+++ b/chess-openings/src/014-s-sicilian-defence-4.tex
@@ -2,5 +2,5 @@
 \openingname{Sicilian Defence}: \mainline{1. e4 c5}.
 \openingname{Dragon Variation}: \mainline{2. Nf3 d6 3. d4 cxd4 4. Nxd4 Nf6 5. Nc3 g6}.
 \openingname{Yugoslav Attack}: \mainline{6. Be3 Bg7 7. f3 O-O 8. Qd2 Nc6 9. Bc4}.
-Main line: \mainline{9... Bd7 10. 0-0-0 Rc8 11. Bb3 Ne5 12. Kb1 Re8} (diagram).
+Main line: \mainline{9... Bd7 10. O-O-O Rc8 11. Bb3 Ne5 12. Kb1 Re8} (diagram).
 
