--- a/chess-openings/chess-openings.tex
+++ b/chess-openings/chess-openings.tex
@@ -19,10 +19,12 @@
 \lhead{Common chess openings (revision 1.2, last edited: 2025-08-23)}
 \rfoot{Source: \url{https://github.com/papabeans1/theory-of-chess}}
 
+\renewcommand{\thesection}{\arabic{section}.}
+
 \newcommand{\openingname}[1]{\emph{#1}}
 \styleA
 \begin{document}
-\author{Remigiusz Suwalski}
+\author{papabeans1}
 \title{Chess openings}
 \section{Open games}
 \input{src/open}
