Update to version 1.2.2: Added Bird's Opening to Flank openings

--- a/chess-openings/src/flank.tex
+++ b/chess-openings/src/flank.tex
@@ -12,4 +12,19 @@ Then \mainline{1...Nf6} \openingname{Anglo-Indian Defence}, \variation{1...e5} \
 \vspace{2mm}
 \end{minipage}
 \hspace{5mm}
+\begin{minipage}[t]{.175\linewidth}
+\fenboard{rnbqk1nr/ppp2ppp/3b4/8/8/8/PPPPP1PP/RNBQKBNR w KQkq - 0 4}
+\raggedright
+\begin{center}
+\scalebox{.560}{\showboard}
+\end{center}
+\newgame
+%FEN@rnbqk1nr/ppp2ppp/3b4/8/8/8/PPPPP1PP/RNBQKBNR w KQkq - 0 4
+\openingname{Bird's Opening}: \mainline{1. f4}.
+
+\openingname{Leningrad Variation}: \mainline{1...d5 2. Nf3 g6 3. g3 Bg7 4. Bg2}.
+\openingname{From's Gambit}: \variation{1...e5 2. fxe5 d6 3. exd6 Bxd6} (diagram).
+\vspace{2mm}
+\end{minipage}
+\hspace{5mm}
 
